--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "test",
+  "name": "zombnb",
   "version": "0.1.0",
+  "homepage": "https://zombnb.serocha.com/",
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
